add endpoint admin
